[package]
name = "rust-relay"
version = "0.1.0"
edition = "2021"
authors = ["Chris Anderson"]
description = "A WebSocket relay server for Materialize views"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
webpki-roots = "0.26"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
url = "2.5"
